2011-10-24  Nat Duca  <nduca@chromium.org>

        [chromium] Encapsulate state machine parts of scheduling in CCSchedulerStateMachine
        https://bugs.webkit.org/show_bug.cgi?id=70714

        Reviewed by James Robinson.

        * WebCore.gypi:
        * platform/graphics/chromium/cc/CCSchedulerStateMachine.cpp: Added.
        (WebCore::CCSchedulerStateMachine::nextAction):
        (WebCore::CCSchedulerStateMachine::updateState):
        * platform/graphics/chromium/cc/CCSchedulerStateMachine.h: Added.
        (WebCore::CCSchedulerStateMachine::CCSchedulerStateMachine):
        (WebCore::CCSchedulerStateMachine::operator=):
        (WebCore::CCSchedulerStateMachine::commitPending):
        (WebCore::CCSchedulerStateMachine::setNeedsRedraw):
        (WebCore::CCSchedulerStateMachine::setNeedsCommit):
        (WebCore::CCSchedulerStateMachine::beginFrameComplete):
        (WebCore::CCSchedulerStateMachine::updateResourcesComplete):

2011-10-27  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/10262205> Allow column progression to be independent of writing mode
        https://bugs.webkit.org/show_bug.cgi?id=71028

        Reviewed by Darin Adler.

        Tests: fast/multicol/block-axis-horizontal-bt.html
               fast/multicol/block-axis-horizontal-tb.html
               fast/multicol/block-axis-vertical-lr.html
               fast/multicol/block-axis-vertical-rl.html
               fast/multicol/flipped-blocks-hit-test.html

        Allow “columns” to be stacked along the block axis rather than the inline axis. This can facilitate
        paginated interfaces. A column-axis property is added in order to enable this mode.

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Handle the column-axis property.
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue): Ditto.
        * css/CSSPrimitiveValueMappings.h: